--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@9am/fire-flame-monorepo",
   "version": "0.0.0",
   "private": true,
-  "description": "",
+  "description": "A fire flame library.",
   "keywords": [
     "fire",
     "flame",
