--- a/packages/@9am/fire-flame-react/package.json
+++ b/packages/@9am/fire-flame-react/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@9am/fire-flame-react",
   "version": "0.1.0",
-  "description": "",
+  "description": "A fire flame library.",
   "keywords": [
     "fire",
     "flame",
